<resources>
    <string name="app_name">Catch The Rainbow</string>

    <string name="delete">Delete</string>
    <string name="name">Name:</string>
    <string name="menu_new_track">New track</string>
    <string name="album">Album:</string>
    <string name="my_album">My album</string>
    <string name="ask_delete">Do you want to Delete?</string>
    <string name="ask_open">A project with this name already exists, open it?</string>
    <string name="warning">Warning</string>

    <string name="audio_files_saved">Audio file saved in the Music folder</string>

    <string name="select_audio_files">Select the audio files!</string>

    <!-- Menu -->
    <string name="menu_import">Import audio</string>
    <string name="menu_export">Export audio</string>
    <string name="menu_language">Language</string>
    <string name="menu_close">Close project</string>
    <string name="menu_editing">Edit</string>
    <!-- end Menu -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_swipe_open_project">Swipe to open an existing project</string>
    <string name="navigation_swipe_create_project">Swipe to create a new project</string>
    <string name="create_a_new_project">Create A New Project</string>

    <string name="action_settings">Settings</string>
    <string name="action_effects">Effects</string>
    <string name="action_import">Import</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_remove">Remove</string>
    <string name="action_cut">Cut</string>

    <string name="action_move">Hand</string>
    <string name="action_select">Selection</string>

    <string name="conformation">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error_select_a_project">Error! Select a project.</string>
    <string name="error_enter_name_project">Error! Enter the name of the project.</string>
    <string name="error_fill_all_fields">Error! Fill in all the fields.</string>
    <string name="select_a_project">Select a project</string>
    <string name="new_project">New Project</string>

    <string name="remove_track_conformation">Are you sure you want to remove this track?</string>
    <string name="import_notification">Audio is importing. You can view the progress in notification panel.</string>


    <string name="songs_count">Audio Files</string>
    <string name="select_all_musics">All</string>
    <string name="getAudio">Get Audio</string>

    <string name="new_audio_stack">New Audio Track</string>
    <string name="mute">Mute</string>
    <string name="solo">Solo</string>


    <string name="no_title">No Title</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="path">Path</string>
    <string name="folder">Folder</string>

    <string name="encoding">Encoding...</string>
    <string name="please_import_some_audio">Please, import some audio.</string>

    <string name="effect_echo">ECHO</string>
    <string name="fwet_dry_mix">Wet Dry Mix</string>
    <string name="ffeed_back">Feed Back</string>
    <string name="fleft_delay">Left Delay</string>
    <string name="fright_delay">Right Delay</string>
    <string name="ipan_delay">Pan Delay  </string>


    <string name="effect_flanger">FLANGER</string>
    <string name="fdepth">Depth</string>
    <string name="ffrequency">Frequency</string>
    <string name="iwaveform">Waveform</string>
    <string name="fdelay">Delay</string>
    <string name="lphase">Pan Delay</string>


    <string name="effect_distortion">DISTORTION</string>
    <string name="fgain">Gain</string>
    <string name="fedge">Edge</string>
    <string name="fpost_eq_center_frequency">Post EQ Center Frequency</string>
    <string name="fpost_eq_band_width">Post EQ Bandwidth</string>
    <string name="fpre_low_pass_cut_off">Pre Low pass Cut off</string>


    <string name="effect_chorus">CHORUS</string>
    <string name="lPhase_chorus">Phase</string>

    <string-array name="lwaveform_array">
        <item>Triangle</item>
        <item>Sine</item>
    </string-array>


    <string name="effect_reverb">REVERB</string>
    <string name="fin_gain">In Gain</string>
    <string name="freverb_mix">Reverb Mix</string>
    <string name="freverb_time">Reverb Time</string>
    <string name="fhigh_freq_rt_ratio">High Freq RT Ratio</string>


    <string name="effect_phaser">PHASER</string>
    <string name="fdry_mix">Dry Mix</string>
    <string name="fwet_mix">Wet Mix</string>
    <string name="frate">Rate</string>
    <string name="frange">Range</string>
    <string name="ffreq">Freq</string>
    <string name="lchannel">Channel</string>

    <string name="effect_equalizer">EQUALIZER</string>

    <string name="reset">Reset</string>

    <string-array name="spinner_array">
        <item>TITLE</item>
        <item>ARTIST</item>
        <item>DURATION</item>
        <item>ALBUM</item>
    </string-array>

    <string name="audio_files">Audio Files</string>
    <string name="folders">Folders</string>

    <string name="year">Year:</string>
    <string name="format">Format:</string>
    <string name="echo">Echo</string>
    <string name="flanger">Flanger</string>
    <string name="distortion">Distortion</string>
    <string name="chorus">Chorus</string>
    <string name="reverb">Reverb</string>
    <string name="phaser">Phaser</string>
    <string name="equalizer">Equalizer</string>

    <string name="track_not_selected">A track must be selected!</string>

    <string name="effect_apply_message">Applying effect</string>
</resources>
