<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@android:color/transparent"
              android:gravity="center"
              tools:context="com.sunflower.catchtherainbow.Views.Helpful.ExportSongFragment">

    <LinearLayout
        android:id="@+id/ExportSongLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_fragment"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/colorForeground"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edNameSong"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_textview"
            android:inputType="textPersonName"
            android:text="@string/new_project"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/album"
            android:textColor="@color/colorForeground"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edNameAlbum"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/background_textview"
            android:inputType="textPersonName"
            android:text="@string/my_album"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/conformation"
                android:textColor="@color/colorForeground"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/bCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/cancel"
                android:textColor="@color/colorForeground"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
